change dockerfile and jenkinfile